draco/src/main/antlr4/.antlr/DracoParser.java
// Generated from /home/nik/Desktop/unimol-compiler-development/draco/src/main/antlr4/Draco.g4 by ANTLR 4.13.1

package it.unimol.draco;

import it.unimol.draco.IncludeNotAtBeginOfLineException;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class DracoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, INCLUDE=58, COMMENT=59, 
		INTEGER=60, CHAR=61, SINGLE_STRING=62, EQ=63, GE=64, GT=65, LE=66, LT=67, 
		NE=68, MINUS=69, PLUS=70, DIV=71, MUL=72, TRUE=73, FALSE=74, OPEN_PAR=75, 
		CLOSE_PAR=76, OPEN_CURLY=77, CLOSE_CURLY=78, OPEN_BRACK=79, CLOSE_BRACK=80, 
		COMMA=81, WS=82, ID=83, INT_FORMATTER=84, FLOAT=85, DECIMAL_FLOAT=86, 
		SPECIAL_FLOAT=87, HEX_FLOAT=88;
	public static final int
		RULE_string = 0, RULE_proc_decl = 1, RULE_procs_decl = 2, RULE_program = 3, 
		RULE_types_decl = 4, RULE_var_decl = 5, RULE_vars_decl = 6, RULE_const_expr = 7, 
		RULE_base_expr = 8, RULE_fun_call = 9, RULE_expr = 10, RULE_postifix_op_expr = 11, 
		RULE_postfix_op = 12, RULE_deref_expr = 13, RULE_field_expr = 14, RULE_postfix_int_op_expr = 15, 
		RULE_bitbin_op = 16, RULE_bitwise_expr = 17, RULE_alg1_expr = 18, RULE_alg2_expr = 19, 
		RULE_cmp_expr = 20, RULE_neg_expr = 21, RULE_and_expr = 22, RULE_or_expr = 23, 
		RULE_dimensions = 24, RULE_array_type = 25, RULE_ptr_type = 26, RULE_fun_type = 27, 
		RULE_struct_type = 28, RULE_union_type = 29, RULE_enum_type = 30, RULE_type = 31, 
		RULE_param = 32, RULE_params = 33, RULE_decls = 34, RULE_procedure = 35, 
		RULE_left_hand_expr = 36, RULE_assignemnt_expr = 37, RULE_assignemnt_stmt = 38, 
		RULE_if_expr = 39, RULE_if_expr_tail = 40, RULE_if_stmt_body = 41, RULE_if_stmt = 42, 
		RULE_if_stmt_tail = 43, RULE_while_stmt = 44, RULE_for_stmt = 45, RULE_case_stmt = 46, 
		RULE_case_stmt_body = 47, RULE_case_expr = 48, RULE_range = 49, RULE_call_stmt = 50, 
		RULE_stmt_body = 51, RULE_stmt = 52, RULE_formatted_param = 53, RULE_formatted_params = 54, 
		RULE_io_func_name = 55, RULE_io_expr = 56;
	private static String[] makeRuleNames() {
		return new String[] {
			"string", "proc_decl", "procs_decl", "program", "types_decl", "var_decl", 
			"vars_decl", "const_expr", "base_expr", "fun_call", "expr", "postifix_op_expr", 
			"postfix_op", "deref_expr", "field_expr", "postfix_int_op_expr", "bitbin_op", 
			"bitwise_expr", "alg1_expr", "alg2_expr", "cmp_expr", "neg_expr", "and_expr", 
			"or_expr", "dimensions", "array_type", "ptr_type", "fun_type", "struct_type", 
			"union_type", "enum_type", "type", "param", "params", "decls", "procedure", 
			"left_hand_expr", "assignemnt_expr", "assignemnt_stmt", "if_expr", "if_expr_tail", 
			"if_stmt_body", "if_stmt", "if_stmt_tail", "while_stmt", "for_stmt", 
			"case_stmt", "case_stmt_body", "case_expr", "range", "call_stmt", "stmt_body", 
			"stmt", "formatted_param", "formatted_params", "io_func_name", "io_expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'extern'", "';'", "'type'", "'@'", "'register'", "'pretend'", 
			"'.'", "'&'", "'~'", "'|'", "'><'", "'<<'", "'>>'", "'%'", "'~='", "'not'", 
			"'and'", "'or'", "'proc'", "'struct'", "'union'", "'enum'", "'signed'", 
			"'unsigned'", "'file'", "'channel'", "'input'", "'output'", "'binary'", 
			"'text'", "'nonrec'", "':'", "'corp'", "':='", "'if'", "'then'", "'fi'", 
			"'else'", "'elif'", "'while'", "'do'", "'od'", "'for'", "'from'", "'by'", 
			"'upto'", "'downto'", "'case'", "'esac'", "'incase'", "'default'", "'..'", 
			"'ignore'", "'read'", "'write'", "'readln'", "'writeln'", null, null, 
			null, null, null, "'='", "'>='", "'>'", "'<='", "'<'", "'<>'", "'-'", 
			"'+'", "'/'", "'*'", "'true'", "'false'", "'('", "')'", "'{'", "'}'", 
			"'['", "']'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "INCLUDE", 
			"COMMENT", "INTEGER", "CHAR", "SINGLE_STRING", "EQ", "GE", "GT", "LE", 
			"LT", "NE", "MINUS", "PLUS", "DIV", "MUL", "TRUE", "FALSE", "OPEN_PAR", 
			"CLOSE_PAR", "OPEN_CURLY", "CLOSE_CURLY", "OPEN_BRACK", "CLOSE_BRACK", 
			"COMMA", "WS", "ID", "INT_FORMATTER", "FLOAT", "DECIMAL_FLOAT", "SPECIAL_FLOAT", 
			"HEX_FLOAT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Draco.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DracoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StringContext extends ParserRuleContext {
		public List<TerminalNode> SINGLE_STRING() { return getTokens(DracoParser.SINGLE_STRING); }
		public TerminalNode SINGLE_STRING(int i) {
			return getToken(DracoParser.SINGLE_STRING, i);
		}
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_string);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(114);
				match(SINGLE_STRING);
				}
				}
				setState(117); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SINGLE_STRING );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Proc_declContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DracoParser.ID, 0); }
		public TerminalNode OPEN_PAR() { return getToken(DracoParser.OPEN_PAR, 0); }
		public TerminalNode CLOSE_PAR() { return getToken(DracoParser.CLOSE_PAR, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public Proc_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_proc_decl; }
	}

	public final Proc_declContext proc_decl() throws RecognitionException {
		Proc_declContext _localctx = new Proc_declContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_proc_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(ID);
			setState(120);
			match(OPEN_PAR);
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 133693472L) != 0) || ((((_la - 72)) & ~0x3f) == 0 && ((1L << (_la - 72)) & 2177L) != 0)) {
				{
				setState(121);
				params();
				}
			}

			setState(124);
			match(CLOSE_PAR);
			setState(125);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Procs_declContext extends ParserRuleContext {
		public List<Proc_declContext> proc_decl() {
			return getRuleContexts(Proc_declContext.class);
		}
		public Proc_declContext proc_decl(int i) {
			return getRuleContext(Proc_declContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(DracoParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(DracoParser.COMMA, i);
		}
		public Procs_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procs_decl; }
	}

	public final Procs_declContext procs_decl() throws RecognitionException {
		Procs_declContext _localctx = new Procs_declContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_procs_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(T__0);
			setState(128);
			proc_decl();
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(129);
				match(COMMA);
				setState(130);
				proc_decl();
				}
				}
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(136);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public DeclsContext decls() {
			return getRuleContext(DeclsContext.class,0);
		}
		public List<TerminalNode> INCLUDE() { return getTokens(DracoParser.INCLUDE); }
		public TerminalNode INCLUDE(int i) {
			return getToken(DracoParser.INCLUDE, i);
		}
		public List<ProcedureContext> procedure() {
			return getRuleContexts(ProcedureContext.class);
		}
		public ProcedureContext procedure(int i) {
			return getRuleContext(ProcedureContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INCLUDE) {
				{
				{
				setState(138);
				match(INCLUDE);
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(144);
			decls();
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__18) {
				{
				{
				setState(145);
				procedure();
				}
				}
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Types_declContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(DracoParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(DracoParser.ID, i);
		}
		public List<TerminalNode> EQ() { return getTokens(DracoParser.EQ); }
		public TerminalNode EQ(int i) {
			return getToken(DracoParser.EQ, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(DracoParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(DracoParser.COMMA, i);
		}
		public Types_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_types_decl; }
	}

	public final Types_declContext types_decl() throws RecognitionException {
		Types_declContext _localctx = new Types_declContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_types_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(T__2);
			setState(152);
			match(ID);
			setState(153);
			match(EQ);
			setState(154);
			type();
			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(155);
				match(COMMA);
				setState(156);
				match(ID);
				setState(157);
				match(EQ);
				setState(158);
				type();
				}
				}
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(164);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Var_declContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DracoParser.ID, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode EQ() { return getToken(DracoParser.EQ, 0); }
		public Var_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_decl; }
	}

	public final Var_declContext var_decl() throws RecognitionException {
		Var_declContext _localctx = new Var_declContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_var_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			match(ID);
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(167);
				match(T__3);
				setState(168);
				expr();
				}
			}

			setState(173);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EQ) {
				{
				setState(171);
				match(EQ);
				setState(172);
				expr();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Vars_declContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<Var_declContext> var_decl() {
			return getRuleContexts(Var_declContext.class);
		}
		public Var_declContext var_decl(int i) {
			return getRuleContext(Var_declContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(DracoParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(DracoParser.COMMA, i);
		}
		public Vars_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vars_decl; }
	}

	public final Vars_declContext vars_decl() throws RecognitionException {
		Vars_declContext _localctx = new Vars_declContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_vars_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(175);
				match(T__4);
				}
			}

			setState(178);
			type();
			setState(179);
			var_decl();
			setState(184);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(180);
				match(COMMA);
				setState(181);
				var_decl();
				}
				}
				setState(186);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(187);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Const_exprContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(DracoParser.INTEGER, 0); }
		public TerminalNode CHAR() { return getToken(DracoParser.CHAR, 0); }
		public TerminalNode FLOAT() { return getToken(DracoParser.FLOAT, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public TerminalNode FALSE() { return getToken(DracoParser.FALSE, 0); }
		public TerminalNode TRUE() { return getToken(DracoParser.TRUE, 0); }
		public Const_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_const_expr; }
	}

	public final Const_exprContext const_expr() throws RecognitionException {
		Const_exprContext _localctx = new Const_exprContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_const_expr);
		try {
			setState(195);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTEGER:
				enterOuterAlt(_localctx, 1);
				{
				setState(189);
				match(INTEGER);
				}
				break;
			case CHAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(190);
				match(CHAR);
				}
				break;
			case FLOAT:
				enterOuterAlt(_localctx, 3);
				{
				setState(191);
				match(FLOAT);
				}
				break;
			case SINGLE_STRING:
				enterOuterAlt(_localctx, 4);
				{
				setState(192);
				string();
				}
				break;
			case FALSE:
				enterOuterAlt(_localctx, 5);
				{
				setState(193);
				match(FALSE);
				}
				break;
			case TRUE:
				enterOuterAlt(_localctx, 6);
				{
				setState(194);
				match(TRUE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Base_exprContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DracoParser.ID, 0); }
		public Fun_callContext fun_call() {
			return getRuleContext(Fun_callContext.class,0);
		}
		public TerminalNode OPEN_PAR() { return getToken(DracoParser.OPEN_PAR, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode CLOSE_PAR() { return getToken(DracoParser.CLOSE_PAR, 0); }
		public Base_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_base_expr; }
	}

	public final Base_exprContext base_expr() throws RecognitionException {
		Base_exprContext _localctx = new Base_exprContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_base_expr);
		try {
			setState(203);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(197);
				match(ID);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(198);
				fun_call();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(199);
				match(OPEN_PAR);
				setState(200);
				expr();
				setState(201);
				match(CLOSE_PAR);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Fun_callContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DracoParser.ID, 0); }
		public TerminalNode OPEN_PAR() { return getToken(DracoParser.OPEN_PAR, 0); }
		public TerminalNode CLOSE_PAR() { return getToken(DracoParser.CLOSE_PAR, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(DracoParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(DracoParser.COMMA, i);
		}
		public Io_exprContext io_expr() {
			return getRuleContext(Io_exprContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Fun_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fun_call; }
	}
